Påmeldingsknapp lagt til. Duration på mobil lagt til.

--- a/index_sigrun_kopi.html
+++ b/index_sigrun_kopi.html
@@ -10,10 +10,23 @@
 
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Test</title>
+
+    <style>
+        .flex-contain {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        .flex-item {
+            padding-bottom: 30px;
+            padding-left: 30px;
+        }
+    </style>
 
 </head>
 
@@ -21,38 +34,38 @@
 
     <!--HEADER-->
     <header class="pageHeader">
-			<div class="wrapper basic">
-				<a class="logo" href="index.html">
-					<img src="../images/logo.svg" alt="Making Waves Logo">
-				</a>
-                <button>Menu</button>
-                <nav class="mainMenu">
-					<ul>
-                        <li><a href="#">Add track</a></li>
-					</ul>
-				</nav>
-			</div>
+        <div class="wrapper basic">
+            <a class="logo" href="index.html">
+                <img src="../images/logo.svg" alt="Making Waves Logo">
+            </a>
+            <button>Menu</button>
+            <nav class="mainMenu">
+                <ul>
+                    <li><a href="#">Add track</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-<main>
-<div class="wrapper basic">
+    <main>
+        <div class="wrapper basic">
 
-        <!--
+            <!--
         <input class="firstInfo" type="button" value="More info.."/>
         -->
 
-        <!--CALENDER VIEW
+            <!--CALENDER VIEW
         <div ng-include="'components/calender.html'"></div>
         -->
 
-        <!--CALENDER VIEW FLEXBOX  -->
-        <!-- this component shows the info in the calender with flexbox boostrap v4-alpha -->
+            <!--CALENDER VIEW FLEXBOX  -->
+            <!-- this component shows the info in the calender with flexbox boostrap v4-alpha -->
 
-        <!--NAVIGATION -->
-        <div ng-include="'components/navigation.html'"></div>
-<!-- TABLE VISIBLE ONLY ON LARGE SCREENS -->
-<div id="cal-desktop">
-<table class="table-cal">
-    <!--
+            <!--NAVIGATION -->
+            <div ng-include="'components/navigation.html'"></div>
+            <!-- TABLE VISIBLE ONLY ON LARGE SCREENS -->
+            <div id="cal-desktop">
+                <table class="table-cal">
+                    <!--
     <thead class="thead-default">
         <tr>
             <th>Time</th>
@@ -64,109 +77,104 @@
         </tr>
     </thead>
     -->
-    <tbody>
-        <tr>
-            <th scope="row">1300-
-                <br>1345
-            </th>
-            <td class="cal" rowspan="3">
-                <strong>React/Redux</strong>
-                (track 1)
-            </td>
-            <td class="cal" rowspan="3">
-                <strong>Team Tools: Gameplan</strong>
-                (track 2)
-            </td>
-            <td class="cal" rowspan="2">
-                <strong>Elasticsearch Class</strong>
-                (track 3)
-            </td>
-            <td class="cal" rowspan="2">
-                <strong>Azure</strong>
-                (track 4)
-            </td>
-            <td class="cal" rowspan="1">
-                <strong>New Digital Product Review</strong>
-                (track 5)
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">1400-
-                <br>1445
-            </th>
-            <td class="cal">
-                <strong>Co-creation</strong>
-                (track 5)
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">1500-
-                <br>1545
-            </th>
-            <td class="cal">
-                <strong>Elasticsearch Class </strong>
-                (Track 3)
-            </td>
-            <td style="background: white"></td>
-            <td class="cal">
-                <strong>Classic project setup to product thinking</strong>
-                (track 5)
-            </td>
-        </tr>
-    </tbody>
-</table>
-</div>
-
-<!-- DIV VISIBLE ONLY ON SMALL SCREENS -->
-<div id="cal-mobile">
-    <div id="main">
-        <div>
-          <div class="track-time-mob">1300-<br>1345</div>
-        </div>
-        <div>
-                <div class="track-mob">
-                    React/Redux
-                </div>
-                <div class="track-mob">
-                    Team tools
-                </div>
-                <div class="track-mob">
-                    Elastic search Class
-                </div>
-                <div class="track-mob">
-                    Azure tools
-                </div>
-                <div class="track-mob">
-                    New Digital Products
-                </div>
-        </div>
-    </div>
-
-    <div id="main">
-            <div>
-              <div class="track-time-mob">1400-<br>1445</div>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1300-
+                                <br>1345
+                            </th>
+                            <td class="cal" rowspan="3">
+                                <strong>React/Redux</strong> (track 1)
+                            </td>
+                            <td class="cal" rowspan="3">
+                                <strong>Team Tools: Gameplan</strong> (track 2)
+                            </td>
+                            <td class="cal" rowspan="2">
+                                <strong>Elasticsearch Class</strong> (track 3)
+                            </td>
+                            <td class="cal" rowspan="2">
+                                <strong>Azure</strong> (track 4)
+                            </td>
+                            <td class="cal" rowspan="1">
+                                <strong>New Digital Product Review</strong> (track 5)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">1400-
+                                <br>1445
+                            </th>
+                            <td class="cal">
+                                <strong>Co-creation</strong> (track 5)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">1500-
+                                <br>1545
+                            </th>
+                            <td class="cal">
+                                <strong>Elasticsearch Class </strong> (Track 3)
+                            </td>
+                            <td style="background: white"></td>
+                            <td class="cal">
+                                <strong>Classic project setup to product thinking</strong> (track 5)
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div>
-                <div class="track-mob">
-                    React/Redux
-                </div>
-            </div>
-    </div>
 
-    <div id="main">
-            <div>
-              <div class="track-time-mob">1500-<br>1545</div>
-            </div>
-            <div>
-                    <div class="track-mob">
-                        Elastic Search Class
+            <!-- DIV VISIBLE ONLY ON SMALL SCREENS -->
+            <div id="cal-mobile">
+                <div id="main">
+                    <div>
+                        <div class="track-time-mob">1300-
+                            <br>1345</div>
                     </div>
-                    <div class="track-mob">
-                        Classic project setup to product thinking
+                    <div>
+                        <div class="track-mob">
+                            React/Redux
+                        </div>
+                        <div class="track-mob">
+                            Team tools
+                        </div>
+                        <div class="track-mob">
+                            Elastic search Class
+                        </div>
+                        <div class="track-mob">
+                            Azure tools
+                        </div>
+                        <div class="track-mob">
+                            New Digital Products
+                        </div>
+                    </div>
+                </div>
+
+                <div id="main">
+                    <div>
+                        <div class="track-time-mob">1400-
+                            <br>1445</div>
+                    </div>
+                    <div>
+                        <div class="track-mob">
+                            React/Redux
+                        </div>
+                    </div>
+                </div>
+
+                <div id="main">
+                    <div>
+                        <div class="track-time-mob">1500-
+                            <br>1545</div>
+                    </div>
+                    <div>
+                        <div class="track-mob">
+                            Elastic Search Class
+                        </div>
+                        <div class="track-mob">
+                            Classic project setup to product thinking
+                        </div>
                     </div>
                 </div>
             </div>
-</div>
 
 
             <section class="qa" ng-controller="ShowDoController as ShowDoCtrl">
@@ -179,21 +187,33 @@
                             <h3>{{track.title}}</h3>
 
                         </a>
-                        <div>
-                            <p>{{track.expect}}</p>
-                            <p><strong>Where:</strong> {{track.room}}</p>
+                        <div class="flex-contain">
+                            <div>
+                                <p>{{track.expect}}</p>
+                                <p><strong>Where:</strong> {{track.room}}</p>
+                            </div>
+                            <div class="flex-item">
+                                <p class="lead">Going?</p>
+                                <label class="switch">
+                                  <input type="checkbox">
+                                  <div class="slider"></div>
+                                </label>
+                            </div>
                         </div>
+
                     </li>
                 </ul>
             </section>
         </div>
 
-    </main><!--end container-->
+    </main>
+    <!--end container-->
 
     <!--scrollToTop button-->
     <a href="#" class="scrollToTopBtn">
         <i class="fa fa-arrow-circle-up fa-4x" aria-hidden="true"></i>
-    </a><!--end scrollToTop button-->
+    </a>
+    <!--end scrollToTop button-->
 
 
 
@@ -202,53 +222,54 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 
     <script>
-        (function(){
-        var showDoApp = angular.module("showDoApp", []);
+        (function () {
+            var showDoApp = angular.module("showDoApp", []);
 
-        showDoApp.controller("ShowDoController", ['$scope', '$http', function($scope, $http){
-            $scope.tracks = [
-                {
-                title: 'React/Redux - a comprehensive introduction',
-                expect: "When you have finished this class, you should have a clear understanding and overview of what React is, the three different kind of React components that we have, React Lifecycle, what problems we run into using React only applications, and how Redux can help avoiding these problems. You will also get an introduction to some ES6 (Ecma Script 2016) need-to-know basics to help understand the React/Redux documentation better.",
-                room: "Kantina",
-                numberOfPartic: "23",
-                prereq: "Curiosity and interest in learning how to program React in a structural and separation-of concerning way.",
-                imgSrc: "img/event1.jpg"
+            showDoApp.controller("ShowDoController", ['$scope', '$http', function ($scope, $http) {
+                $scope.tracks = [
+                    {
+                        id: "01",
+                        title: 'React/Redux - a comprehensive introduction',
+                        expect: "When you have finished this class, you should have a clear understanding and overview of what React is, the three different kind of React components that we have, React Lifecycle, what problems we run into using React only applications, and how Redux can help avoiding these problems. You will also get an introduction to some ES6 (Ecma Script 2016) need-to-know basics to help understand the React/Redux documentation better.",
+                        room: "Kantina",
+                        numberOfPartic: "23",
+                        prereq: "Curiosity and interest in learning how to program React in a structural and separation-of concerning way.",
+                        imgSrc: "img/event1.jpg"
               },
-              {
-                title: 'Team Tools: Gameplan',
-                expect: 'Something!',
-                room: "Stallen",
-                numberOfPartic: "23",
-                prereq: "Curiosity and interest in learning how to program React in a structural and separation-of concerning way.",
-                imgSrc: "img/event2.jpg"
+                    {
+                        id: "02",
+                        title: 'Team Tools: Gameplan',
+                        expect: 'Something!',
+                        room: "Stallen",
+                        numberOfPartic: "23",
+                        prereq: "Curiosity and interest in learning how to program React in a structural and separation-of concerning way.",
+                        imgSrc: "img/event2.jpg"
               },
-                                {
-                title: 'Elastic Search Class',
-                expect: "When you have finished this class, you should have a clear understanding and overview of what React is, the three different kind of React components that we have, React Lifecycle, what problems we run into using React only applications, and how Redux can help avoiding these problems. You will also get an introduction to some ES6 (Ecma Script 2016) need-to-know basics to help understand the React/Redux documentation better.",
-                room: "Kantina",
-                numberOfPartic: "23",
-                prereq: "Curiosity and interest in learning how to program React in a structural and separation-of concerning way.",
-                imgSrc: "img/event3.png"
+                    {
+                        id: "03",
+                        title: 'Elastic Search Class',
+                        expect: "When you have finished this class, you should have a clear understanding and overview of what React is, the three different kind of React components that we have, React Lifecycle, what problems we run into using React only applications, and how Redux can help avoiding these problems. You will also get an introduction to some ES6 (Ecma Script 2016) need-to-know basics to help understand the React/Redux documentation better.",
+                        room: "Kantina",
+                        numberOfPartic: "23",
+                        prereq: "Curiosity and interest in learning how to program React in a structural and separation-of concerning way.",
+                        imgSrc: "img/event3.png"
               }
             ];
 
 
 
 
-             //scrollTo more info
-            $scope.scrollTo = function(id){
-                $location.hash(id);
-                $anchorScroll();
-            };
-            //end scrollTo more info
-
-            }]);//end showDoApp
-
-        })();//end ShowDoController
+                //scrollTo more info
+                $scope.scrollTo = function (id) {
+                    $location.hash(id);
+                    $anchorScroll();
+                };
+                //end scrollTo more info
 
 
+            }]); //end showDoApp
 
+        })(); //end ShowDoController
     </script>
 
 
