--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 
     <!--SCRIPT-->
+    <script src="/js/functions.js" type="text/javascript"></script>
     <script src="/js/main.js"></script>
     <script src="/js/json.js"></script>
 </body>
