Listevisning i calender.html.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Latest compiled and minified CSS -->
 
-    <link rel="stylesheet" type="text/css" href="css/global.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
@@ -36,7 +36,7 @@
         <p class="lead"><a href="test">Legg til track</a></p>-->
 
         <!--LIST VIEW-->
-        <div id="list"></div>
+        <!--<div id="list"></div>-->
 
         </div><!--end container-->
     </main><!--end main-->
