--- a/addTrack.html
+++ b/addTrack.html
@@ -13,10 +13,10 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <title>Test</title>
+    <title>Add track</title>
 
     <style>
-        input[type=text], input[type=submit], textarea {
+        input[type=text], input[type=submit], textarea, .custom-file-upload {
             width: 100%;
             padding: 12px 20px;
             margin: 8px 0;
@@ -25,15 +25,37 @@
             -webkit-transition: 0.5s;
             transition: 0.5s;
             outline: none;
+            font-size: 1em;
         }
 
         input[type=submit] {
-            background: #06f;
-            color: white;
+            font-family: "Volte Semibold";
+            background: #fff;
+            color: #0066FF;
+            font-size: 1em;
+            border: 3px solid #0066FF;
+            padding: 20px 0px 15px 0px;
+        }
+
+        input[type=submit]:hover {
+            background: #0066FF;
+            color: #fff;
         }
 
         input[type=text]:focus,  textarea:focus {
-            border: 3px solid #555;
+            border: 3px solid #0066FF;
+        }
+
+        input[type="file"] {
+            display: none;
+        }
+
+        .custom-file-upload {
+            background: #fff;
+            width: auto;
+            display: inline-block;
+            padding: 6px 12px;
+            cursor: pointer;
         }
 
         textarea {
@@ -49,38 +71,49 @@
 <body class="frontpage">
 
     <!--HEADER-->
-    <div id="header"></div>
+    <header class="pageHeader">
+			<div class="wrapper basic">
+				<a class="logo" href="index.html">
+					<img src="../images/logo.svg" alt="Making Waves Logo">
+				</a>
+                <button>Menu</button>
+                <nav class="mainMenu">
+					<ul>
+                        <li><a href="addTrack.html">Add track</a></li>
+					</ul>
+				</nav>
+			</div>
+    </header>
     <main>
         <div class="wrapper basic">
-
+            <p></p>
             <h2>Add track</h2>
 
-            <form action="/action_page.php">
+            <form action="/index.html">
+                <br>
                 Title
-                <br>
                 <input type="text" name="title" value="">
-                <br>
-                <br> Prerequisites
-                <br>
+                <br><br>
+                Prerequisites
                 <input type="text" name="prereq" value="">
-                <br>
-                <br> What to expect
-                <br>
-                <input type="text" name="expect" value="">
-                <br>
-                <br> Who should join?
-                <br>
+                <br><br>
+                What to expect
+                <textarea></textarea>
+                <br><br>
+                Who should join?
                 <input type="text" name="whoShouldJoin" value="">
                 <br>
-                <br> Do you have an image to describe and add attention to your track?
+                <br> Do you have an image to add attention to your track?
                 <br>
-                <input type="text" name="img" value="">
+                <label for="file-upload" class="custom-file-upload">
+                    <i class="fa fa-cloud-upload"></i> Choose an image
+                </label>
+                <input id="file-upload" type="file"/>
                 <br>
                 <br> Anything else to add?
                 <br> (Links, other tracks, co-hosts, equipment etc)
                 <br>
                 <textarea></textarea>
-                <br>
                 <br>
                 <input type="submit" value="Add track">
             </form>
@@ -99,8 +132,8 @@
 
     <!--SCRIPT-->
     <script src="/js/functions.js" type="text/javascript"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/json.js"></script>
+    <script src="/js/main.js" type="text/javascript"></script>
+    <script src="/js/json.js" type="text/javascript"></script>
 </body>
 
 </html>
