--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <!--------------------------------NAVIGATION-------------------------------->
                 <div id="navigation">
                     <div id="navWeek">
-                        <div><a id="prevBtn" href="#"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
-                        <div><a id="thisWeekBtn" href="#">This week</a></div>
-                        <div><a id="nextBtn" href="#">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                        <div><a id="prevBtn"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
+                        <div><a id="thisWeekBtn">This week</a></div>
+                        <div><a id="nextBtn">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
                     </div>
                 </div><!--------------------------------end NAVIGATION-------------------------------->
 
