--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 
         <!--SCRIPT-->
         <!--<script src="/js/functions.js" type="text/javascript"></script>-->
-        <script src="/js/main2.js"></script>
+        <script src="/js/main.js"></script>
         <!--<script src="/js/json.js"></script>-->
     </body>
 </html>
