minor changes to logo hover

--- a/addTrack.html
+++ b/addTrack.html
@@ -74,7 +74,7 @@
     <header class="pageHeader">
 			<div class="wrapper basic">
 				<a class="logo" href="index.html">
-					<img src="../images/logo.svg" alt="Making Waves Logo">
+					<img src="../images/logo-sd.svg" alt="Making Waves Logo">
 				</a>
                 <button>Menu</button>
                 <nav class="mainMenu">
