--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header class="pageHeader">
                 <div class="wrapper basic">
                     <a class="logo" href="index.html">
-                        <img src="../images/logo.png" alt="Making Waves Logo">
+                        <img src="../images/logo-sd.svg" alt="Making Waves Logo">
                     </a>
                     <button>Menu</button>
                     <nav class="mainMenu">
