prev & next date

--- a/show-do-proto-v2/index.html
+++ b/show-do-proto-v2/index.html
@@ -41,12 +41,12 @@
             <div id="navigation">
                 <div id="navWeek">
                     <div><a id="prevBtn"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous<br>
-                            <strong>10.02.17</strong>
+                            <strong id="prevDate"></strong>
                             </a></div>
                     <div style="text-align: center"><a id="thisWeekBtn">Displayed week<br>
-                            <strong>10.03.17</strong></a></div>
+                            <strong id="thisDate"></strong></a></div>
                     <div><a id="nextBtn">Next  <i class="fa fa-angle-right" aria-hidden="true"></i><br>
-                            <strong>24.03.17</strong>
+                            <strong id="nextDate"></strong>
                             </a></div>
                 </div>
             </div>
