fixed file paths

--- a/show-do-proto-v2/addTrack.html
+++ b/show-do-proto-v2/addTrack.html
@@ -90,7 +90,7 @@
             <p></p>
             <h2>Add track</h2>
 
-            <form action="/previewTrack.html">
+            <form action="previewTrack.html">
                 <br>
                 Title
                 <input type="text" name="title" value="">
