--- a/show-do-proto-v2/editTrack1Git.html
+++ b/show-do-proto-v2/editTrack1Git.html
@@ -90,7 +90,7 @@
             <p></p>
             <h2>Edit track</h2>
 
-            <form action="/previewTrack1Git.html">
+            <form action="previewTrack1Git.html">
                 <br>
                 Title
                 <input type="text" name="title" value="Introduksjon til Git">
